# racingproject

./: .gitignore  package.xml  racing_log_20251208_162147_lap1.csv  racing_log_20251208_162147_lap2_incomplete.csv  racing_log_20251208_162225_lap1.csv  racing_log_20251208_162225_lap2_incomplete.csv  setup.py
Path_maker/: QP_Path_maker_final.py  final_path_xy(1.2, 4.0, 8.0).csv  final_path_xy(1.4, 3.5, 8.0).csv
bags/rosbag2_2025_12_08-16_24_09/: metadata.yaml  rosbag2_2025_12_08-16_24_09_0.db3
bags/rosbag2_2025_12_08-16_26_34/: metadata.yaml
logs/: lap_1_time_10.95.csv  lap_2_time_32.00.csv  lap_3_time_36.20.csv
resource/: gen_optimal_path_byQP.py  optimal_path(1.2,4,8).csv  racingproject  system_id_logger.py
resource/qucik_MPC/src/quick_MPC/: path_manager.py  racing_launch.py  racing_node.py  steering_mpc.py
scripts/: racing_node  racing_node_stanley
src/: plot_path.py
src/launch/: racing_launch.py  racing_stanley_launch.py
src/racingproject/: __init__.py  path_manager.py  racing_node.py  speed_pid.py  steering_mpc.py
src/racingproject/data/: final_path_xy(1.0, 2.0, 1.0).csv  final_path_xy(1.4, 3.5, 8.0).csv  optimal_trajectory_xy.csv  waypoints_final.csv
src/racingproject_stanley/: __init__.py  racing_node.py  stanley_controller.py
