<?xml version="1.0"?>
<package format="3">
  <name>racingproject</name>
  <version>0.1.0</version>
  <description>Racing controller with path manager, PID speed control, and MPC steering for Carla via ROS2.</description>
  <maintainer email="user@example.com">Team8</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>cvxpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
